--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,11 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "doc-amd": "^1.0.10"
+  },
+  "devDependencies": {
+    "async-define": "elo7/async-define#^1.0.5"
+  }
 }
