remove codecept and use phantomjs with mocha

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Transform an input into a tag field",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "bash test.sh"
   },
   "repository": {
     "type": "git",
@@ -24,8 +24,10 @@
   "homepage": "https://github.com/elo7/tag-amd#readme",
   "devDependencies": {
     "bower": "1.7.9",
-    "codeceptjs": "0.4.5",
     "express": "4.14.0",
-    "phantomjs-prebuilt": "2.1.12"
+    "mocha": "3.0.2",
+    "mocha-phantomjs": "4.1.0",
+    "phantomjs-prebuilt": "2.1.12",
+    "proclaim": "3.4.3"
   }
 }
