--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "tag-amd",
+  "version": "1.0.0",
   "description": "Transform an input into a tag field",
   "main": "tag.js",
   "authors": [
