--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "tag-amd",
-  "version": "1.0.2-SNAPSHOT",
+  "version": "1.0.2",
   "description": "Transform an input into a tag field",
   "main": "tag.js",
   "authors": [
