--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "tag-amd",
-  "version": "1.0.1-SNAPSHOT",
+  "version": "1.0.1",
   "description": "Transform an input into a tag field",
   "main": "tag.js",
   "authors": [
@@ -22,7 +22,7 @@
     "tests"
   ],
   "dependencies": {
-    "doc-amd": "1.0.10"
+    "doc-amd": "1.0.12"
   },
   "devDependencies": {
     "async-define": "elo7/async-define#1.0.5"
