--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tag-amd",
-  "version": "1.0.1-SNAPSHOT",
+  "version": "1.0.1",
   "description": "Transform an input into a tag field",
   "main": "tag.js",
   "scripts": {
