--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elo7-tag-amd",
-  "version": "1.1.1",
+  "version": "1.1.2-SNAPSHOT",
   "description": "Transform an input into a tag field",
   "main": "tag.js",
   "scripts": {
