--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "tag-amd",
-  "version": "1.1.2",
+  "version": "1.1.3-SNAPSHOT",
   "description": "Transform an input into a tag field",
   "main": "tag.js",
   "authors": [
