--- a/package.json
+++ b/package.json
@@ -36,9 +36,6 @@
     "cypress": "^1.1.2",
     "express": "4.15.4",
     "minifier": "0.8.1",
-    "mocha": "3.5.0",
-    "mocha-phantomjs": "4.1.0",
-    "phantomjs-prebuilt": "2.1.14",
-    "proclaim": "3.4.5"
+    "mocha-phantomjs": "4.1.0"
   }
 }
