--- a/package.json
+++ b/package.json
@@ -35,9 +35,8 @@
   },
   "devDependencies": {
     "bower": "1.7.9",
-    "cypress": "^1.1.2",
+    "cypress": "2.1.0",
     "express": "4.15.4",
-    "minifier": "0.8.1",
-    "mocha-phantomjs": "4.1.0"
+    "minifier": "0.8.1"
   }
 }
