--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "elo7-tag-amd",
-  "version": "1.2.0",
+  "version": "1.2.1-SNAPSHOT",
   "description": "Transform an input into a tag field",
   "main": "tag.js",
   "scripts": {
     "test": "bash test.sh",
     "test:server": "node test/acceptance/test_server.js",
-    "build:js": "minify src/tag.js -o dist/tag.min.js --compress drop_console=true --mangle --screw-ie8",
-    "build:css": "minify src/tag.css -o dist/tag.min.css",
+    "build:js": "terser src/tag.js -o dist/tag.min.js --compress drop_console=true --mangle",
+    "build:css": "cleancss src/tag.css -o dist/tag.min.css",
     "build": "npm run build:js && npm run build:css"
   },
   "repository": {
@@ -27,16 +27,15 @@
   },
   "homepage": "https://github.com/elo7/tag-amd#readme",
   "dependencies": {
-    "define-async": "1.2.0",
-    "elo7-doc-amd": "1.1.1"
+    "define-async": "1.3.2",
+    "elo7-doc-amd": "1.5.1"
   },
   "devDependencies": {
-    "bower": "1.7.9",
-    "express": "4.15.4",
-    "minifier": "0.8.1",
-    "mocha": "3.5.0",
-    "mocha-phantomjs": "4.1.0",
-    "phantomjs-prebuilt": "2.1.14",
-    "proclaim": "3.4.5"
+    "clean-css-cli": "4.3.0",
+    "express": "4.17.1",
+    "mocha": "7.1.0",
+    "mocha-chrome": "2.2.0",
+    "proclaim": "3.6.0",
+    "terser": "4.6.6"
   }
 }
